# FirewallRuleManager

./: Makefile
CS231n/: CIFAR10_loader.py  Image.py  NearestNeighbor.py  Run.py  SVM.py  Softmax.py
RC0436_FirewallRuleManager/: ACLRuleManager.cpp  ACLRuleManager.hpp  CommonFunc.cpp  CommonFunc.hpp  main.cpp  makefile
RC0592_ConfigurationManagement/configurationmanagement-demo/: .gitignore  Makefile.am  README.md  configure.ac
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo1/: Makefile.am
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo1/src/: main.cpp
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo2/: Makefile.am  cmdemo2daemon.service.in  cmdemo2daemonactivator.json
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo2/cli/include/: commandexecutor.hpp  commandparser.hpp  commandvector.hpp
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo2/cli/src/: commandexecutor.cpp  commandparser.cpp  main.cpp
RC0592_ConfigurationManagement/configurationmanagement-demo/cmdemo2/daemon/src/: main.cpp
RC0592_ConfigurationManagement/configurationmanagement-examples/: Makefile.am
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/: Makefile.am
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/include/: foo.hpp  fooconfiguration.hpp
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/include/plugins/: fookeyformatter.hpp  foorequesthandlerplugin.hpp
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/protobuf/cmexample1domain/requestinterface/: deletefoorequest.proto  foo.proto  fooiddescriptionpair.proto  readalldescriptionsresponse.proto  readfoorequest.proto  readresponse.proto
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/src/: fooconfiguration.cpp
RC0592_ConfigurationManagement/configurationmanagement-examples/cmexample1/src/plugins/: fookeyformatter.cpp  foorequesthandlerplugin.cpp
RC0592_ConfigurationManagement/protobuf-test/: Makefile
algorithm/array/: main.cpp
algorithm/chain/: main.cpp  makefile
neural_networks/: network.py  neural_networks.py  run.py
opencv/: test.py
